[gd_scene load_steps=3 format=3 uid="uid://bib76auiumexo"]

[ext_resource type="Script" uid="uid://c63onbh1x7crv" path="res://Multiplayer.gd" id="1_3dxm6"]
[ext_resource type="PackedScene" uid="uid://bqaij5xfnwhk0" path="res://Scenes/Player_Fields.tscn" id="2_lgr22"]

[node name="Main" type="Node2D"]
script = ExtResource("1_3dxm6")
player_field_scene = ExtResource("2_lgr22")

[node name="HostButton" type="Button" parent="."]
offset_left = 337.0
offset_top = 398.0
offset_right = 381.0
offset_bottom = 429.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
offset_left = 569.0
offset_top = 290.0
offset_right = 607.0
offset_bottom = 321.0
text = "Join"

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
